# TIAGoPro_geometric_drawing

./: .gitignore  README.md
src/draw/: CMakeLists.txt  package.xml
src/draw/config/: draw.rviz
src/draw/include/draw/: nullspace_exploration.hpp
src/draw/launch/: draw.launch.py  draw_launch.py  world.launch.py
src/draw/models/: whiteboard.sdf
src/draw/src/: draw_circle.cpp  draw_circle_air.cpp  draw_circle_whiteboard.cpp  draw_function_air.cpp  draw_function_whiteboard.cpp  fixed_frame_tf2_broadcaster.cpp  frame_broadcaster.cpp  nullspace_exploration.cpp  tf_pub.cpp
src/draw/worlds/: whiteboard.world
src/hello_moveit/: package.xml
src/hello_moveit/src/: hello_moveit.cpp
src/point_cloud_perception/: CMakeLists.txt  package.xml
src/point_cloud_perception/launch/: perception.launch.py
src/point_cloud_perception/src/: euclidean_cluster.cpp  plane_segmentation.cpp  pre_process.cpp  voxel_filter.cpp
src/surface_detection/: package.xml  setup.py
src/surface_detection/surface_detection/: surface_detector.py
